--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ PIP_AUTO_INSTALL=1
 RUN_TESTS=0
 
 # Odoo Configuration file defaults
-ADMIN_PASSWORD=my-weak-password
+ADMIN_PASSWORD=empjqoznoroc7cph
 ODOO_DATA_DIR=/var/lib/odoo/data
 DB_PORT_5432_TCP_ADDR=db
 DB_MAXCONN=64
@@ -31,7 +31,7 @@ DB_SSLMODE=prefer
 DB_TEMPLATE=template1
 DB_ENV_POSTGRES_USER=odoo
 DBFILTER=.*
-HTTP_INTERFACE=0.0.0.0
+HTTP_INTERFACE=
 HTTP_PORT=8069
 LIMIT_MEMORY_HARD=2684354560
 LIMIT_MEMORY_SOFT=2147483648
@@ -44,7 +44,7 @@ LOG_DB_LEVEL=warning
 LOG_HANDLER=:INFO
 LOG_LEVEL=info
 MAX_CRON_THREADS=2
-PROXY_MODE=False
+PROXY_MODE=True
 SERVER_WIDE_MODULES=base,web
 SMTP_PASSWORD=False
 SMTP_PORT=25
